--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,7 @@
   --orange: #f9b225;
   --black: #3f3d3b;
   --white: white;
+  --grey: #c4c4c4;
   --title-font: "Dosis";
   --main-font: "Open Sans";
 }
@@ -21,6 +22,11 @@ h1,
 h2,
 h3 {
   margin: 0;
+}
+
+.prueba {
+  width: 100%;
+  height: 50rem;
 }
 
 /* NAVIGATION BAR */
@@ -156,7 +162,147 @@ h3 {
   height: 13.3rem;
 }
 
-.prueba {
-  width: 100vw;
-  height: 500px;
+/** Animals for Adoption **/
+
+.animal-adoptions {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 15rem;
+}
+
+.animal-adoptions-text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 7rem;
+  color: var(--black);
+}
+
+.animal-adoptions-text h2 {
+  font-family: var(--main-font);
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.animal-adoptions-text p {
+  font-family: var(--main-font);
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 15px;
+}
+
+.animal-adoptions-cards {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card {
+  width: 20rem;
+  height: 28.3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 15px;
+  box-shadow: 0 0 0.5rem  rgb(146 146 146 / 50%);
+}
+
+.card-extra {
+  width: 20rem;
+  height: 28.3rem;
+  background-color: var(--orange);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 15px;
+  box-shadow: 0 0 0.5rem rgb(146 146 146 / 50%);
+  padding: 2rem;
+}
+
+.card-img {
+  width: 100%;
+  height: 50%;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.card-logo {
+  width: 35%;
+  height: 35%;
+}
+
+.card-name {
+  font-family: var(--main-font);
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 50%;
+}
+
+.card-text {
+  color: var(--white);
+  text-align: center;
+  font-family: var(--main-font);
+  font-size: 15px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.card-link {
+  width: 12rem;
+  height: 3rem;
+  border: 1px solid var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.5rem;
+  text-decoration: none;
+  color: var(--white);
+  font-family: var(--main-font);
+  font-size: 12px;
+  font-weight: 400;
+}
+
+/** COUNTER **/
+
+.counter {
+  width: 100%;
+  height: 50vh;
+  border-top: 1px solid var(--grey);
+  border-bottom: 1px solid var(--grey);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.counter-container {
+  width: calc(1 / 6 * 100%);
+  height: calc(1 / 2 * 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.counter-text {
+  font-family: var(--main-font);
+  font-size: 30px;
+  font-weight: 600;
+  color: var(--grey);
+  margin: 0;
+}
+
+.counter-display {
+  font-family: var(--main-font);
+  font-size: 60px;
+  font-weight: 600;
+  color: var(--orange);
 }
