--- a/src/css/login.css
+++ b/src/css/login.css
@@ -18,7 +18,7 @@ body{
   flex-direction: row;
   margin: 0;
   height: 100vh;
-  background-color: bisque;
+  background-color: #f5f5f5;
 }
 
 .img-dog-login{
@@ -64,6 +64,8 @@ input{
   padding: 1rem;
   border-radius: 12px;
   border: var(--grey-color) 1px solid;
+  font-family: var(--text-font);
+  font-size: 1rem;
 }
 
 .button{
@@ -75,6 +77,7 @@ input{
   border: 0;
   font-size: 0.9rem;
   font-family: var(--text-font);
+  transition: background-color 0.7s ease;
 }
 
 .button img{
@@ -88,8 +91,13 @@ input{
   margin-bottom: 2rem;
 }
 
+.btn-login-email:hover{
+  background-color: var(--terciary-color);
+}
+
 .button span{
   color: var(--white-color);
+  pointer-events: none;
 }
 
 .btn-login-google{
@@ -98,12 +106,21 @@ input{
   color: var(--grey-color);
   margin-bottom: 1rem;
 }
+
+.btn-login-google:hover{
+  background-color: #f5f5f5;
+}
+
 .btn-login-google span{
   color: var(--grey-color);
 }
 
 .btn-login-facebook{
   background-color: #30457B;
+}
+
+.btn-login-facebook:hover{
+  background-color: rgb(10, 20, 44);
 }
 
 .link-signin{
@@ -113,4 +130,5 @@ input{
 
 p{
   font-family: var(--text-font);
+  color: var(--dark-color);
 }
