--- a/src/css/login.css
+++ b/src/css/login.css
@@ -9,11 +9,10 @@
 
   /* IMPROVE: Recomiendo poner mas fuentes como alternativas (al menos 3) */
   --title-font: "Dosis", sans-serif;
-  --subtitle-font: "Poppins", sans-serif;
   --text-font: "Open Sans", sans-serif;
 }
 
-body{
+body {
   display: flex;
   flex-direction: row;
   margin: 0;
@@ -21,12 +20,13 @@ body{
   background-color: #f5f5f5;
 }
 
-.img-dog-login{
-  width: 50%;
+.img-dog-login {
+  width: 45%;
+  height: 100%;
   object-fit: cover;
 }
 
-.container-login{
+.container-login {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,101 +34,160 @@ body{
   width: 50%;
 }
 
-.logo{
+.logo {
+  width: 18%;
   justify-self: flex-start;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
 
-.card-login{
+.card-login {
   display: flex;
   width: 40%;
-  height: 65%;
+  height: 55%;
   flex-direction: column;
-  border-radius: 20px;
-  padding: 3rem;
+  border-radius: 30px;
+  padding: 3.5rem 5rem;
   background-color: white;
+  margin-bottom: 2rem;
 }
 
-.card-login p{
+.card-login p {
   color: var(--grey-color);
   font-family: var(--text-font);
 }
 
-.p-title{
+/* .p-title {
   text-align: center;
   font-family: var(--text-font);
-  font-size: 1.2rem;
-}
+  font-size: 2rem;
+  margin-top: -1rem;
+} */
 
-input{
-  padding: 1rem;
+input {
+  padding: 0.5rem;
   border-radius: 12px;
   border: var(--grey-color) 1px solid;
   font-family: var(--text-font);
   font-size: 1rem;
 }
 
-.button{
+input:focus {
+  color: var(--dark-color);
+  outline-color: var(--dark-color);
+}
+
+.button {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 3rem;
   border-radius: 12px;
   border: 0;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-family: var(--text-font);
+  font-weight: 600;
   transition: background-color 0.7s ease;
 }
 
-.button img{
+.button img {
   object-fit: contain;
   margin-right: 1.5rem;
 }
 
-.btn-login-email{
+.btn-login-email {
   background-color: var(--primary-color);
-  margin-top: 1.5rem;
-  margin-bottom: 2rem;
+  margin-top: 2.5rem;
+  margin-bottom: 4.5rem;
 }
 
-.btn-login-email:hover{
-  background-color: var(--terciary-color);
-}
-
-.button span{
-  color: var(--white-color);
+.button span {
+  color: var(--dark-color);
   pointer-events: none;
 }
 
-.btn-login-google{
+.btn-login-email:hover {
+  background-color: var(--terciary-color);
+}
+
+.btn-login-email:hover span {
+  color: var(--white-color);
+}
+
+/* BOTONES LOGIN */
+.btn-login-google {
+  background-color: var(--white-color);
+  border: var(--grey-color) 1px solid;
+  color: var(--grey-color);
+  margin-bottom: 1rem;
+  margin-top: 4rem;
+}
+
+.btn-login-google:hover {
+  background-color: #bebebe;
+}
+
+.btn-login-google span {
+  color: var(--dark-color);
+}
+
+.btn-login-facebook {
+  background-color: #30457b;
+}
+
+.btn-login-facebook span {
+  color: var(--white-color);
+}
+
+.btn-login-facebook:hover {
+  background-color: rgb(10 20 44);
+}
+
+/* BOTONES SIGN IN */
+.btn-signin-google {
   background-color: var(--white-color);
   border: var(--grey-color) 1px solid;
   color: var(--grey-color);
   margin-bottom: 1rem;
 }
 
-.btn-login-google:hover{
-  background-color: #f5f5f5;
+.btn-signin-google:hover {
+  background-color: #bebebe;
 }
 
-.btn-login-google span{
-  color: var(--grey-color);
+.btn-signin-google span {
+  color: var(--dark-color);
 }
 
-.btn-login-facebook{
-  background-color: #30457B;
+.btn-signin-facebook {
+  background-color: #30457b;
 }
 
-.btn-login-facebook:hover{
-  background-color: rgb(10, 20, 44);
+.btn-signin-facebook span {
+  color: var(--white-color);
 }
 
-.link-signin{
+.btn-signin-facebook:hover {
+  background-color: rgb(10 20 44);
+}
+
+.link-signin {
   color: var(--primary-color);
   font-family: var(--text-font);
 }
 
-p{
+.google {
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.facebook {
+  width: 1.8rem;
+  height: 1.8rem;
+  margin-left: 1.2rem;
+}
+
+p {
   font-family: var(--text-font);
   color: var(--dark-color);
+  font-size: 0.9rem;
 }
