--- a/src/css/index.css
+++ b/src/css/index.css
@@ -330,8 +330,34 @@ h3 {
   padding: 0 15rem;
 }
 
+.adoption-process h2 {
+  font-family: var(--main-font);
+  font-size: 35px;
+  font-weight: 700;
+  padding-bottom: 10rem;
+}
+
 .adoption-process-container {
   width: 100%;
-  height: 5rem;
+  height: 50vh;
   background-color: lightcoral;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+
+  /* column-gap: 10rem; */
+}
+
+.adoption-process-container h4 {
+  font-family: var(--main-font);
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.adoption-process-prueba {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
