--- a/src/css/index.css
+++ b/src/css/index.css
@@ -367,3 +367,74 @@ h3 {
   justify-content: center;
   align-items: center;
 }
+
+/** REGULAR QUESTIONS **/
+.regular-questions {
+  width: 100%;
+
+  /* height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem 15rem;
+  font-family: var(--main-font);
+  background-color: lightskyblue;
+}
+
+/* esta clase creo que no hace nada */
+.wrapper {
+  width: 60%;
+}
+
+.regular-questions h1 {
+  margin-bottom: 2rem;
+}
+
+.container {
+  width: 50%;
+  background-color: white;
+  color: black;
+  border-radius: 20px;
+  box-shadow: 0 5px 10px 0 rgb(0 0 0 / 25%);
+  margin: 2rem 0;
+}
+
+.question {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 20px 80px 20px 20px;
+  position: relative;
+  align-items: center;
+  cursor: pointer;
+}
+
+.question::after {
+  content: "\002B";
+  font-size: 2.2rem;
+  right: 20px;
+  transition: 0.2s;
+}
+
+.question.active::after {
+  transform: rotate(45deg);
+}
+
+.answercont {
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.3s;
+}
+
+.answer {
+  padding: 0 20px 20px;
+  line-height: 1.5rem;
+}
+
+@media screen and (max-width: 790px) {
+  html {
+    font-size: 14px;
+  }
+}
