--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,7 @@
   --orange: #f9b225;
   --black: #3f3d3b;
   --white: white;
-  --grey: #c4c4c4;
+  --grey: #bbbbbb;
   --title-font: "Dosis";
   --main-font: "Open Sans";
 
