--- a/src/css/login.css
+++ b/src/css/login.css
@@ -5,7 +5,7 @@
   --terciary2-color: #c83e4d;
   --dark-color: #3f3d3b;
   --white-color: #fff;
-  --grey-color: #c4c4c4;
+  --grey-color: #bbbbbb;
 
   /* IMPROVE: Recomiendo poner mas fuentes como alternativas (al menos 3) */
   --title-font: "Dosis", sans-serif;
@@ -44,6 +44,7 @@ body {
 .logo {
   width: 100%;
   height: auto;
+  margin-top: 2rem;
 }
 
 .card-login {
@@ -87,7 +88,7 @@ input:focus {
   justify-content: flex-start;
   align-items: center;
   height: 3rem;
-  border-radius: 12px;
+  border-radius: 0.8rem;
   border: 0;
   font-size: 1rem;
   font-family: var(--text-font);
@@ -102,8 +103,8 @@ input:focus {
 
 .btn-login-email {
   background-color: var(--primary-color);
-  margin-top: 2.5rem;
-  margin-bottom: 4.5rem;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
   justify-content: center;
 }
 
@@ -121,6 +122,7 @@ input:focus {
 }
 
 /* BOTONES LOGIN */
+
 .btn-login-google {
   background-color: var(--white-color);
   border: var(--grey-color) 1px solid;
@@ -150,6 +152,14 @@ input:focus {
 }
 
 /* BOTONES SIGN IN */
+
+.btn-signin-email {
+  background-color: var(--primary-color);
+  margin-top: 2rem;
+  margin-bottom: 4.8rem;
+  justify-content: center;
+}
+
 .btn-signin-google {
   background-color: var(--white-color);
   border: var(--grey-color) 1px solid;
@@ -200,9 +210,11 @@ p {
   font-size: 0.9rem;
 }
 
-/*new user css*/
-.double-input{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+.forgot-pass{
+  font-family: var(--text-font);
+  font-size: 0.9rem;
+}
+.forgot-pass a{
+  text-decoration: underline;
+  color: var(--grey-color);
 }
