--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,6 @@
 :root {
   --orange: #f9b225;
+  --yellow: #ffe194;
   --black: #3f3d3b;
   --white: white;
   --grey: #c4c4c4;
@@ -34,25 +35,41 @@ h1 {
   color: var(--white);
   font-family: var(--title-font);
   font-weight: 700;
-  font-size: 3.6rem;
+  font-size: 4rem;
 }
 
 h2 {
-  font-family: var(--title-font);
+  color: var(--white);
+  font-family: var(--main-font);
   font-size: 2.25rem;
 }
 
 h3,
 h4 {
   font-family: var(--main-font);
+  color: var(--black);
   font-size: 1.25rem;
   font-weight: 600;
 }
 
 p {
   font-family: var(--main-font);
+  color: var(--black);
   font-weight: 600;
   font-size: 1rem;
+}
+
+.button {
+  font-size: 1em;
+  background: var(--orange);
+  color: var(--black);
+  display: inline-block;
+  text-decoration: none;
+  padding: 0.7rem 2rem;
+  top: 7rem;
+  border-radius: 3rem;
+  font-family: var(--main-font);
+  font-weight: 600;
 }
 
 .prueba {
@@ -62,25 +79,13 @@ p {
 
 /* NAVIGATION BAR */
 
-/* .topbar {
-  height: calc(1 / 10 * 100vh);
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 15rem;
-  box-sizing: content-box;
-  position: fixed;
-  transition: 0.5s;
-  background: var(--white);
-} */
 .topbar {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 5;
-  padding: 0.5rem;
+  padding: 1.3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -98,20 +103,20 @@ p {
   margin-left: 7rem;
 }
 
-.topbar ul {
+.topbar .nav {
   height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  position: absolute;
   gap: 1rem;
-  margin-right: 7rem;
+  right: 7.7rem;
 }
 
-.topbar ul img {
-  width: 2rem;
-  height: 2rem;
+.topbar .nav img {
+  width: 1.2rem;
   transition: color 0.5s;
+  margin-right: 1.7rem;
 }
 
 .topbar li {
@@ -132,7 +137,8 @@ p {
   text-decoration: underline;
 }
 
-.topbar ul img:hover {
+.topbar ul img:hover,
+.topbar .burger.active .menu-icons a:hover {
   filter: invert(17%) sepia(40%) saturate(6264%) hue-rotate(329deg) brightness(98%) contrast(103%);
 }
 
@@ -143,14 +149,123 @@ p {
   background-color: var(--black);
 }
 
-.topbar .nav.active .vertical-line {
+.topbar .burger.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  right: 0;
+  top: 0;
+  margin: 0%;
+  padding: 0%;
+  width: 100vw;
+}
+
+.topbar .burger.active .opacity {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: rgb(50 48 53/100%);
+  opacity: 0.6;
+  width: 100vw;
+  height: 100%;
+}
+
+.topbar .burger .menu {
   display: none;
+}
+
+.topbar .burger.active .menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 42rem;
+  width: 90vw;
+  height: 80%;
+  background: white;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.topbar .burger.active .menu ul {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 10rem;
+  left: 3rem;
+  line-height: 4rem;
+}
+
+.topbar .burger.active .menu ul a {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.topbar .burger.active .menu .menu-contact a {
+  font-size: 1.25rem;
+  position: absolute;
+  bottom: 10.5rem;
+  left: 8.2rem;
+}
+
+.topbar .burger.active .m-footer {
+  max-width: 42rem;
+  display: flex;
+  width: 90vw;
+  height: 22%;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background: var(--orange);
+}
+
+.topbar .burger.active .menu-icons {
+  position: absolute;
+  right: 4.5rem;
+  top: 28rem;
+  display: grid;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: row;
+  transition: color 0.5s;
+}
+
+.topbar .burger.active .menu-icons img {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 0.2rem 0;
+  filter: brightness(0%);
+}
+
+.menu-toggle {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  background: url("../assets/icons/menu-icon.svg");
+  background-size: 2rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  right: 5rem;
+}
+
+.menu-toggle.active {
+  background: url("../assets/icons/menu-exit.svg");
+  background-size: 1.3rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 2;
+  top: 2rem;
 }
 
 /* HEADER */
 .welcome {
-  width: 100%;
-  height: calc(8 / 8 * 100vh);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background:
     linear-gradient(
       0deg,
@@ -164,42 +279,36 @@ p {
 }
 
 .welcome-content {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: var(--white);
-}
-
-.welcome-content-h1,
-.welcome-content-h3 {
-  width: 60rem;
-  height: 18rem;
-  display: flex;
+  text-align: center;
+  max-width: 85rem;
   justify-content: start;
   align-items: center;
+  color: white;
 }
 
-.welcome-content-h1 h1 {
-  font-family: var(--title-font);
-  font-size: 6.4rem;
-  font-weight: 800;
+.welcome-content h2 {
+  font-size: 1.6rem;
+  font-weight: 600;
+  position: relative;
+  top: 0.8rem;
 }
 
-.welcome-content-h3 h3 {
-  font-family: var(--main-font);
-  font-size: 2.5rem;
-  font-weight: 400;
+.welcome-content h1 img {
+  width: 2.3rem;
+  position: relative;
+  bottom: -0.3rem;
+}
+
+.welcome .button {
+  position: relative;
 }
 
 /* CATEGORIES */
 
 .animal-categories {
   width: 100%;
-  height: 50vh;
-  background-color: var(--orange);
+  height: 25vh;
+  background: var(--orange);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -207,24 +316,22 @@ p {
 }
 
 .animal-categories h2 {
-  color: var(--white);
-  font-family: var(--main-font);
   font-size: 32px;
   font-weight: 700;
+  color: var(--black);
+  margin-top: 2rem;
 }
 
 .animal-categories-icons {
-  width: 60vw;
-  height: 50%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 2.7rem;
   padding: 50px 0 40px;
 }
 
 .animal-categories-icons img {
-  width: 73px;
-  height: 73px;
+  width: 4.5rem;
+  height: 5rem;
 }
 
 .dogs,
@@ -232,13 +339,14 @@ p {
 .rodents,
 .birds,
 .reptiles {
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background-color: white;
-  width: 13.3rem;
-  height: 13.3rem;
+  border: 0.3rem solid var(--yellow);
+  background: var(--white);
+  width: 9rem;
+  height: 9rem;
 }
 
 /** Animals for Adoption **/
@@ -250,114 +358,106 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 15rem;
 }
 
-.animal-adoptions-text {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 7rem;
+.animal-adoptions h2 {
   color: var(--black);
-}
-
-.animal-adoptions-text h2 {
-  font-family: var(--main-font);
-  font-size: 32px;
+  font-size: 2.5rem;
   font-weight: 700;
+  position: relative;
+  margin-top: -2rem;
 }
 
-.animal-adoptions-text p {
+.animal-adoptions p {
   font-family: var(--main-font);
-  font-size: 20px;
+  font-size: 1.5rem;
   font-weight: 600;
-  margin-top: 15px;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
 }
 
 .animal-adoptions-cards {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 3rem;
+  position: relative;
+  width: auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 2rem;
+  margin-top: 5rem;
 }
 
-/* BUG: con los tamaños de las cartas para diferentes resoluciones, revisar */
-
 .card {
-  /* width: 100vw; */
-  height: 40vh;
-  max-width: 27rem;
-  display: flex;
+  width: 16rem;
+  height: 22rem;
+  display: grid;
+  grid-template-rows: repeat(1, 3fr 1fr 1fr);
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  border-radius: 15px;
+  text-align: center;
+  border-radius: 1rem;
   box-shadow: 0 0 0.5rem  rgb(146 146 146 / 50%);
+}
+
+.card img {
+  width: 100%;
+  height: 16.1rem;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.card-name {
+  color: var(--black);
+  font-family: var(--main-font);
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.animal-adoptions .card p img {
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.2rem;
+}
+
+.animal-adoptions .card p {
+  font-size: 1rem;
 }
 
 .card-extra {
   /* width: 100vw; */
-  height: 40vh;
-  max-width: 27rem;
-  background-color: var(--orange);
+  width: 16rem;
+  height: 24rem;
+  background-color: var(--white);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   border-radius: 15px;
   box-shadow: 0 0 0.5rem rgb(146 146 146 / 50%);
-  padding: 2rem;
 }
 
-.card-img {
-  max-width: 100%;
-  max-height: 50%;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+.card-extra img {
+  width: 5.5rem;
+  margin-top: 1.8rem;
 }
 
-.card-logo {
-  max-width: 35%;
-  max-height: 35%;
-}
-
-.card-name {
-  color: var(--black);
-  font-family: var(--main-font);
-  font-size: 20px;
-  font-weight: 600;
-  padding-bottom: 50%;
-}
-
-.card-text {
-  color: var(--white);
+.card-extra p {
+  color: var(--orange);
+  font-size: 1rem;
   text-align: center;
-  font-family: var(--main-font);
-  font-size: 15px;/* 22px */
-  font-weight: 400;
-  margin: 0;
 }
 
-.card-text span {
-  font-weight: 700;
+.card-extra p span {
+  font-weight: 800;
 }
 
-.card-link {
-  width: 15rem;
-  height: 4rem;
-  border: 1px solid var(--white);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 1.8rem;
-  text-decoration: none;
-  color: var(--white);
-  font-family: var(--main-font);
-  font-size: 18px;
-  font-weight: 400;
+.card-extra .horizontal-line {
+  height: 0.1rem;
+  width: 100%;
+  background-color: var(--orange);
+}
+
+.card-extra .button {
+  margin-bottom: 2rem;
 }
 
 /** COUNTER **/
@@ -697,47 +797,9 @@ p {
 
 /* media query for mobile */
 
-@media (min-width: 0) and (max-width: 1500px) {
-  .menu-toggle {
-    position: relative;
-    width: 3rem;
-    height: 3rem;
-    background: url("../assets/icons/menu-icon.svg");
-    background-size: 2rem;
-    background-repeat: no-repeat;
-    background-position: center;
-    cursor: pointer;
-    margin-right: 5rem;
-  }
-
-  .menu-toggle.active {
-    background: url("../assets/icons/menu-exit.svg");
-    background-size: 1.8rem;
-    background-repeat: no-repeat;
-    background-position: center;
-    z-index: 2;
-  }
-
-  .topbar ul {
+@media (min-width: 0) and (max-width: 767px) {
+  .topbar .nav {
     display: none;
-  }
-
-  .topbar .nav.active {
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-    overflow: hidden;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: var(--white);
-    touch-action: none;
   }
 }
 
@@ -746,17 +808,31 @@ p {
 } */
 
 @media (min-width: 768px) {
+  .menu-toggle {
+    display: absolute;
+  }
 
-
+  .topbar .nav {
+    display: none;
+  }
 }
 
 @media (min-width: 1200px) {
+  .menu-toggle {
+    position: absolute;
+  }
 
-
+  .topbar .nav {
+    display: none;
+  }
 }
 
 @media (min-width: 1650px) {
-  /* .menu-toggle {
+  .menu-toggle {
     display: none;
-  } */
+  }
+
+  .topbar .nav {
+    display: flex;
+  }
 }
