--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,8 @@
   --black: #3f3d3b;
   --white: white;
   --grey: #c4c4c4;
-  --terciary: #d11149;
+  --green: #015865;
+  --red: #d11149;
   --title-font: "Dosis";
   --text-font: "Open Sans";
 
@@ -30,6 +31,7 @@ body {
 html {
   scroll-behavior: smooth;
   display: inline-block;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -43,9 +45,8 @@ h1 {
 h2 {
   font-family: var(--text-font);
   color: var(--black);
-  font-weight: 600;
   font-size: 2rem;
-  margin: 0 2rem;
+  margin: 0 1rem;
 }
 
 h3 {
@@ -282,7 +283,7 @@ a {
 }
 
 .home h1 img {
-  width: 1.8rem;
+  width: 1.5rem;
   margin-bottom: -0.2rem;
 }
 
@@ -350,11 +351,11 @@ a {
 }
 
 .adoption h2 {
-  margin: 2rem  2rem 0;
+  margin: -3rem  0 0;
 }
 
 .adoption .text {
-  margin: 1.5rem;
+  margin: 1rem 6rem;
   font-size: 1rem;
   font-weight: 500;
 }
@@ -366,7 +367,7 @@ a {
   justify-content: center;
   align-content: center;
   gap: 4rem;
-  margin: 4rem 0 10rem;
+  margin: 4rem 0 5rem;
 }
 
 .adoption .group .card {
@@ -399,11 +400,10 @@ a {
   margin-left: -1rem;
 }
 
-.card-extra {
-  /* width: 100vw; */
+.adoption .group .card-extra {
   width: 16rem;
-  height: 24rem;
-  background-color: var(--white);
+  height: 22rem;
+  background-color: var(--green);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -412,29 +412,35 @@ a {
   box-shadow: 0 0 0.5rem rgb(146 146 146 / 50%);
 }
 
-.card-extra img {
+.adoption .group .card-extra img {
   width: 5.5rem;
   margin-top: 1.8rem;
 }
 
-.card-extra p {
-  color: var(--orange);
+.adoption .group .card-extra p {
+  color: var(--white);
   font-size: 1rem;
   text-align: center;
+  line-height: 0rem;
 }
 
-.card-extra p span {
+.adoption .group .card-extra p span {
   font-weight: 800;
 }
 
-.card-extra .horizontal-line {
-  height: 0.1rem;
+.adoption .group .card-extra .horizontal-line {
+  height: 0.15rem;
   width: 100%;
-  background-color: var(--orange);
+  background-color: var(--white);
 }
 
-.card-extra .button {
+.adoption .group .card-extra .button {
   margin-bottom: 2rem;
+}
+
+.adoption .more {
+  visibility: hidden;
+  opacity: 0;
 }
 
 /* <!-- -----------------------------COUNTER--------------------------------- --> */
@@ -442,8 +448,8 @@ a {
 .counter {
   width: 100%;
   height: 30vh;
-  border-top: 0.1rem solid var(--grey);
-  border-bottom: 0.1rem solid var(--grey);
+  border-top: 0.15rem solid var(--grey);
+  border-bottom: 0.15rem solid var(--grey);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -468,7 +474,6 @@ a {
   width: 100%;
   height: fit-content;
   text-align: center;
-  border-bottom: 0.1rem solid var(--black);
 }
 
 .guide h2 {
@@ -511,7 +516,7 @@ a {
 
 .guide .button {
   width: 7rem;
-  margin: 6rem 0;
+  margin: 6rem 0 9rem;
 }
 
 /* <!-- -----------------------------QUESTION------------------------- --> */
@@ -521,7 +526,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 7rem;
+  margin: 4.5rem 0 7rem;
 }
 
 .list .container {
@@ -537,7 +542,8 @@ a {
 }
 
 .list h2 {
-  margin: 4rem 0;
+  margin: 4rem 1rem;
+  text-align: center;
 }
 
 .list .container .question {
@@ -582,25 +588,39 @@ a {
   max-height: 0;
   overflow: hidden;
   transition: 0.3s;
+  line-height: 1.5rem;
+}
+
+.list .container .answer {
+  padding: 1.25rem;
 }
 
 .list .container .answer p {
   font-weight: 400;
-  padding: 1.25rem;
-  line-height: 1.5rem;
+
+  /* padding: 1.25rem; */
+}
+
+.list .container .answer ul {
+  font-family: var(--text-font);
+  font-weight: 400;
+  color: var(--black);
+  font-size: 0.8rem;
+  padding-left: 0.7rem;
 }
 
 /* <!-- -----------------------------FOOTER------------------------- --> */
 footer {
   width: 100%;
-  height: 90vh;
+  height: 80vh;
   background: var(--black);
 }
 
 footer h4 {
   color: var(--white);
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin: 0.5rem 0 0;
+  font-weight: 700;
 }
 
 footer p {
@@ -621,7 +641,7 @@ footer .information {
   flex-direction: column;
   align-content: center;
   align-items: flex-start;
-  gap: 1rem;
+  gap: 5vh;
   margin: 0 2rem;
 }
 
@@ -632,9 +652,8 @@ footer .information .column {
   flex-direction: column;
   align-self: center;
   text-align: center;
-  line-height: 1rem;
+  line-height: 0.8rem;
   position: relative;
-  top: 0.5rem;
 }
 
 footer .information .column .mail {
@@ -642,19 +661,19 @@ footer .information .column .mail {
 }
 
 footer .information .column img {
-  height: 2rem;
-  margin-top: 1rem;
+  height: 1.4rem;
+  margin-top: -1rem;
 }
 
 footer .information .column .social img {
   filter: invert(50%) sepia(1%) saturate(43%) hue-rotate(270deg) brightness(109%) contrast(101%);
   width: 1.3rem;
   height: 1.3rem;
-  margin: 1rem 0.3rem;
+  margin: 1rem 0.3rem 0;
 }
 
 footer .information .column a {
-  margin: 0.8rem 0 0;
+  margin: 0.6rem 0 0;
 }
 
 footer .copyright {
@@ -665,16 +684,50 @@ footer .copyright {
 
 footer .copyright .horizontal-line {
   width: 70%;
+  margin-top: -1rem;
+}
+
+footer .copyright p {
+  margin: 1rem;
 }
 
 /* <!-- -----------------------------MEDIAQUERY------------------------ --> */
 @media screen and (min-width: 767px) {
+  h1 {
+    font-size: 3.1rem;
+  }
+
+  h2 {
+    font-size: 2.2rem;
+  }
+
+  p {
+    font-size: 0.9rem;
+  }
+
+  .home p {
+    font-size: 1.1rem;
+  }
+
+  .home h1 img {
+    width: 2rem;
+  }
+
+  .adoption h2 {
+    margin-top: 6rem;
+  }
+
+  .adoption .text {
+    font-size: 1.1rem;
+    font-weight: 500;
+  }
+
   br {
     display: none;
   }
 
   .topbar .logo {
-    left: 6rem;
+    left: 4rem;
   }
 
   .topbar .burger-img {
@@ -682,15 +735,24 @@ footer .copyright .horizontal-line {
   }
 
   .adoption h2 {
-    margin-top: -3rem;
+    margin-top: -4.5rem;
+  }
+
+  .adoption .group {
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .adoption .group .card-extra {
     display: none;
   }
 
-  .adoption .group {
-    grid-template-columns: repeat(2, 1fr);
+  .adoption .more {
+    visibility: visible;
+    opacity: 1;
+    justify-self: center;
+    position: relative;
+    width: 6rem;
+    margin-bottom: 9rem;
   }
 
   .counter {
@@ -706,7 +768,19 @@ footer .copyright .horizontal-line {
   }
 
   footer {
-    height: 50vh;
+    height: 40vh;
+  }
+
+  footer h4 {
+    margin-bottom: 1rem;
+  }
+
+  footer p {
+    font-size: 1rem;
+  }
+
+  footer a {
+    font-size: 1rem;
   }
 
   footer .information {
@@ -719,8 +793,9 @@ footer .copyright .horizontal-line {
     margin-top: -1rem;
   }
 
-  footer .information .three {
-    order: 2;
+  footer .information .column {
+    text-align: left;
+    line-height: 1rem;
   }
 }
 
@@ -731,6 +806,10 @@ footer .copyright .horizontal-line {
 
   h2 {
     font-size: 2.5rem;
+  }
+
+  p {
+    font-size: 1rem;
   }
 
   .home p {
@@ -746,8 +825,9 @@ footer .copyright .horizontal-line {
   }
 
   .adoption .text {
+    margin: 1rem 2rem 1.4rem;
     font-size: 1.15rem;
-    width: 20rem;
+    width: 25rem;
     justify-self: center;
   }
 
@@ -769,9 +849,33 @@ footer .copyright .horizontal-line {
   .guide .group {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .list .container .answer ul {
+    font-size: 1rem;
+  }
+
+  footer .information {
+    gap: 3vw;
+    justify-content: flex-start;
+    margin: 0 15vw;
+  }
+
+  footer .information .column {
+    width: 13rem;
+    line-height: 1.2rem;
+  }
+
+  footer .information .two {
+    position: absolute;
+    right: 15vw;
+  }
 }
 
 @media screen and (min-width: 1300px) {
+  h1 {
+    font-size: 4rem;
+  }
+
   .topbar .logo {
     left: 10rem;
   }
@@ -815,5 +919,82 @@ footer .copyright .horizontal-line {
 
   .topbar .desktop a:hover {
     text-decoration: underline;
+  }
+
+  .home p {
+    font-size: 1.35rem;
+  }
+
+  .home h1 img {
+    width: 2.25rem;
+  }
+
+  .category .icon .shadow {
+    width: 7rem;
+    height: 7rem;
+  }
+
+  .category .icon img {
+    width: 3.2rem;
+    height: 4.5;
+  }
+
+  .adoption h2 {
+    margin-top: 11rem;
+  }
+
+  .adoption .group {
+    grid-template-columns: repeat(5, 1fr);
+    gap: 2.5rem;
+    margin-bottom: 6rem;
+  }
+
+  .adoption .group .card-extra {
+    display: flex;
+  }
+
+  .adoption .more {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  .counter {
+    gap: 10rem;
+  }
+
+  .guide .group {
+    gap: 10rem;
+  }
+
+  .guide h2 {
+    margin-top: 11rem;
+  }
+
+  .guide .group .step {
+    width: 20rem;
+  }
+
+  .guide .group .step img {
+    height: 9rem;
+  }
+
+  .guide .button {
+    margin-bottom: 11rem;
+  }
+
+  .list h2 {
+    margin-top: 2rem;
+  }
+
+  .list {
+    margin-bottom: 11rem;
+  }
+
+  footer .information {
+    margin: 0 19vw;
+  }
+
+  footer .information .two {
+    right: 19vw;
   }
 }
