--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,15 +1,13 @@
 :root {
-  --primary-color: #f9b225;
-  --secondary-color: #ffe194;
-  --terciary-color: #d11149;
-  --terciary2-color: #c83e4d;
-  --dark-color: #3f3d3b;
-  --white-color: #fff;
-  --grey-color: #bbbbbb;
-
-  /* IMPROVE: Recomiendo poner mas fuentes como alternativas (al menos 3) */
-  --title-font: "Dosis", sans-serif;
-  --text-font: "Open Sans", sans-serif;
+  --orange: #f9b225;
+  --yellow: #ffe194;
+  --black: #3f3d3b;
+  --white: white;
+  --grey: #c4c4c4;
+  --lightgrey: #f5f5f5;
+  --green: #015865;
+  --title-font: "Dosis";
+  --text-font: "Open Sans";
 }
 
 body {
@@ -73,7 +71,7 @@ body {
 input {
   padding: 0.5rem;
   border-radius: 12px;
-  border: var(--grey-color) 1px solid;
+  border: var(--grey) 1px solid;
   font-family: var(--text-font);
   font-size: 1rem;
 }
@@ -102,7 +100,7 @@ input:focus {
 }
 
 .btn-login-email {
-  background-color: var(--primary-color);
+  background-color: var(--orange);
   margin-top: 2rem;
   margin-bottom: 3rem;
   justify-content: center;
@@ -154,7 +152,7 @@ input:focus {
 /* BOTONES SIGN IN */
 
 .btn-signin-email {
-  background-color: var(--primary-color);
+  background-color: var(--orange);
   margin-top: 2rem;
   margin-bottom: 3.8rem;
   justify-content: center;
@@ -191,7 +189,7 @@ input:focus {
 }
 
 .link-signin {
-  color: var(--primary-color);
+  color: var(--orange);
   font-family: var(--text-font);
 }
 
