--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,13 +1,15 @@
 :root {
-  --orange: #f9b225;
-  --yellow: #ffe194;
-  --black: #3f3d3b;
-  --white: white;
-  --grey: #c4c4c4;
-  --lightgrey: #f5f5f5;
-  --green: #015865;
-  --title-font: "Dosis";
-  --text-font: "Open Sans";
+  --primary-color: #f9b225;
+  --secondary-color: #ffe194;
+  --terciary-color: #d11149;
+  --terciary2-color: #c83e4d;
+  --dark-color: #3f3d3b;
+  --white-color: #fff;
+  --grey-color: #bbbbbb;
+
+  /* IMPROVE: Recomiendo poner mas fuentes como alternativas (al menos 3) */
+  --title-font: "Dosis", sans-serif;
+  --text-font: "Open Sans", sans-serif;
 }
 
 body {
@@ -57,7 +59,7 @@ body {
 }
 
 .card-login p {
-  color: var(--grey-color);
+  color: var(--dark-color);
   font-family: var(--text-font);
 }
 
@@ -68,10 +70,11 @@ body {
   margin-top: -1rem;
 } */
 
+
 input {
   padding: 0.5rem;
   border-radius: 12px;
-  border: var(--grey) 1px solid;
+  border: var(--grey-color) 1px solid;
   font-family: var(--text-font);
   font-size: 1rem;
 }
@@ -100,7 +103,7 @@ input:focus {
 }
 
 .btn-login-email {
-  background-color: var(--orange);
+  background-color: var(--primary-color);
   margin-top: 2rem;
   margin-bottom: 3rem;
   justify-content: center;
@@ -152,9 +155,9 @@ input:focus {
 /* BOTONES SIGN IN */
 
 .btn-signin-email {
-  background-color: var(--orange);
+  background-color: var(--primary-color);
   margin-top: 2rem;
-  margin-bottom: 3.8rem;
+  margin-bottom: 2rem;
   justify-content: center;
 }
 .btn-signin-email:hover {
@@ -187,9 +190,11 @@ input:focus {
 .btn-signin-facebook:hover {
   background-color: rgb(10 20 44);
 }
-
+.pepe{
+  margin-top: -3px;
+}
 .link-signin {
-  color: var(--orange);
+  color: var(--primary-color);
   font-family: var(--text-font);
 }
 
