--- a/src/css/form-user.css
+++ b/src/css/form-user.css
@@ -1,16 +1,13 @@
 :root {
-  --primary-color: #f9b225;
-  --secondary-color: #ffe194;
-  --terciary-color: #d11149;
-  --terciary2-color: #c83e4d;
-  --dark-color: #3f3d3b;
-  --white-color: #fff;
-  --light-grey-color: #f5f5f5;
-  --grey-color: #c4c4c4;
-
-  /* IMPROVE: Recomiendo poner mas fuentes como alternativas (al menos 3) */
-  --title-font: "Dosis", sans-serif;
-  --text-font: "Open Sans", sans-serif;
+  --orange: #f9b225;
+  --yellow: #ffe194;
+  --black: #3f3d3b;
+  --white: white;
+  --grey: #c4c4c4;
+  --lightgrey: #f5f5f5;
+  --green: #015865;
+  --title-font: "Dosis";
+  --text-font: "Open Sans";
 }
 
 body {
@@ -46,19 +43,34 @@ img {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 9rem;
+  margin-top: 5rem;
 }
 
-.question{
+/*.question{
   font-size: 1rem;
+  font-weight: 600;
   font-family: var(--text-font);
+  color: var(--green);
+  border: 0px;
+  background-color: var(--lightgrey);
+  border-radius: 1rem;
+  margin: 0.2rem;
+  padding: 0.5rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
 }
+
+.question:focus{
+  outline-color: var(--grey);
+}*/
 
 h1 {
   font-family: var(--text-font);
   font-size: 2rem;
   font-weight: 800;
-  color: var(--dark-color);
+  color: var(--black);
   text-align: left;
   margin: 0;
 }
@@ -67,7 +79,7 @@ h2 {
   font-family: var(--text-font);
   font-size: 2rem;
   font-weight: 600;
-  color: var(--dark-color);
+  color: var(--black);
   text-align: left;
   margin-top: 0.2rem;
 }
@@ -87,7 +99,7 @@ ul,
 .checkbox {
   font-family: var(--text-font);
   list-style: none;
-  font-size: 0.8rem;
+  font-size: 1rem;
   line-height: 1.2rem;
 }
 
@@ -96,7 +108,7 @@ ul,
 }
 
 button {
-  background-color: var(--primary-color);
+  background-color: var(--orange);
   padding: 0.8rem 2rem;
   border-style: none;
   border-radius: 2rem;
@@ -112,4 +124,80 @@ button {
 button:hover {
   background-color: #cc9320;
   cursor: pointer;
+}
+
+.question{
+  display: flex;
+  flex-direction: column;
+  background: red;
+  width: 100%;
+  transition: all 0.4s;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.magicbox{
+  display: inline-flex;
+  justify-content: start;
+  align-items: baseline;
+}
+
+.dropdown{
+  display: flex;
+  position: relative;
+  width: 12.5rem;
+  height: 1rem;
+  margin-left: 1rem;
+}
+
+.dropdown::before{
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 2px solid var(--white);
+  right: 0.1rem;
+  top: 0.9rem;
+  z-index: 2;
+}
+
+.dropdown .active::before{
+  transform: rotate(-255deg);
+}
+
+.dropdown input{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  padding: 12px 10px;
+  background-color: var(--lightgrey);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+}
+
+.dropdown .question{
+  position:absolute;
+  top: 80px;
+  width: 100%;
+  background: var(--lightgrey);
+  box-shadow: 0 30px 30px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  overflow: hidden;
+  display: none;
+}
+
+.dropdown.active .question{
+  display: block;
+}
+
+.dropdown .question div{
+  padding: 12px 20px;
+  cursor: pointer;
+}
+
+.dropdown .question div:hover{
+  background-color: var(--yellow);
 }
